添加上传文件接口

--- a/测试跨域.html
+++ b/测试跨域.html
@@ -13,7 +13,7 @@
 fetch('http://localhost:3000/user/login', {
   body: JSON.stringify({
     userNum: 'admin',
-    password: '1314love'
+    password: '123456'
   }),
   headers: {
     'content-type': 'application/json;charset=UTF-8'
@@ -37,8 +37,6 @@ fetch('http://localhost:3000/user/login', {
     username: '修改',
     avatar: '11',
     sex: '1',
-    faculty: '110',
-    major: '11011'
   }),
     cache: 'no-cache',
     credentials: 'include',
