1.添加管理员获取已审批论文成果接口 2.debug 个人论文成果用户信息 3.添加审批数功能

--- a/uploadFile.html
+++ b/uploadFile.html
@@ -21,7 +21,7 @@
 
   // 登录
   function login() {
-    fetch('http://localhost:3000/user/login', {
+    fetch('http://zz.mawenli.com/user/login', {
       body: JSON.stringify({
         userNum: 'admin',
         password: '123456'
@@ -56,7 +56,7 @@
     // formData.append('key', dislodgeRandomStr(file.name));
     // formData.append('token', token);
 
-    fetch('http://localhost:3000/upload/uploadFile', {
+    fetch('http://zz.mawenli.com/upload/uploadFile', {
       body: formData,
       cache: 'no-cache', // 是否缓存
       credentials: 'include', // 携带cookie
